# osctet

./: .gitignore  Cargo.toml  README.md  build.rs  developer_notes.md  patch.inst
.github/workflows/: build.yml  plutil.yml
benches/: render.rs
demosongs/: chloroquine.osctet  critter chorus.osctet  portrait of an imagined landscape.osctet  ringing.osctet
docs/: faq.html  index.html  style.css
font/: DinaMedium-10.bdf  DinaMedium-12.bdf  DinaMedium-13.bdf  DinaMedium-8.bdf
macos/Osctet.app/Contents/: Info.plist
macos/Osctet.app/Contents/Resources/: osctet.icns
src/: adsr.rs  beat.rs  compressor.rs  config.rs  dsp.rs  fx.rs  input.rs  keyboard.rs  lib.rs  main.rs  module.rs  pattern.rs  pitch.rs  playback.rs  smpl.rs  song.rs  synth.rs  timespan.rs  ui.rs
src/synth/: lfo.rs  pcm.rs
src/ui/: developer.rs  general.rs  general_tab.rs  info.rs  instruments.rs  instruments_tab.rs  pattern.rs  pattern_tab.rs  settings.rs  settings_tab.rs  text.rs  textedit.rs  theme.rs
testdata/: interpolation.osctet  lfo.osctet  lfo_noise.osctet  noise.osctet  scale.osctet  scale_delay.osctet  scale_dry.osctet  scale_reverb.osctet  song.osctet  undecad.osctet
