[package]
name = "osctet"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
cpal = "0.15.3"
fundsp = { git = "https://github.com/SamiPerttu/fundsp.git", default-features = false, features = ["std"] }
midir = "0.10.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
rand = "0.8.5"
rmp-serde = "1.3.0"
rfd = "0.15.0"
macroquad = "0.4.13"

[profile.dev]
opt-level = 1