[package]
name = "osctet"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
cpal = "0.15.3"
fundsp = { git = "https://github.com/SamiPerttu/fundsp.git" }
midir = "0.10.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
rand = "0.8.5"
rmp-serde = "1.3.0"
rfd = "0.15.0"
macroquad = { git = "https://github.com/jangler/macroquad.git" }
gcd = "2.3.0"
palette = { version = "0.7.6", default-features = false, features = ["std", "serializing"] }
ordered-float = "4.5.0"
pitch-detector = "0.3.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render"
harness = false

[profile.dev]
opt-level = 1

[build-dependencies]
winresource = "0.1.19"
