[package]
name = "osctet"
version = "1.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
cpal = { git = "https://github.com/jangler/cpal.git", features = ["jack"] }
fundsp = { git = "https://github.com/SamiPerttu/fundsp.git", rev = "a4f126b" }
midir = "0.10.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
rand = "0.8.5"
rmp-serde = "1.3.0"
rfd = "0.15.0"
macroquad = { git = "https://github.com/jangler/macroquad.git" }
gcd = "2.3.0"
palette = { version = "0.7.6", default-features = false, features = ["std", "serializing"] }
ordered-float = "4.5.0"
pitch-detector = "0.3.1"
bdf-reader = "0.1.2"
flate2 = "1.0.35"
memmem = "0.1.1"
rtrb = "0.3.2"
triple_buffer = "8.1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render"
harness = false

[profile.dev]
opt-level = 1

# [profile.bench]
# debug = true

[build-dependencies]
winresource = "0.1.19"
